fix: table overflow, characters actions rename, sortOrder type

--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,14 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+.vertical-scroll-content::-webkit-scrollbar {
+  width: 8px;
+}
+.vertical-scroll-content::-webkit-scrollbar-thumb {
+  background-color: #d1d1d1;
+  border-radius: 200px;
+}
+.vertical-scroll-content::-webkit-scrollbar-track {
+  background: transparent;
+}
